--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
 :root {
     --cor-primaria: #3E3145;
 }
@@ -10,9 +5,57 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.full{
+header{
+    text-align: center;
+}
+
+.cartoes{
+    margin-top: 50px;
+    background-color: #3E3145;
+    width: auto;
+    height: 150px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px ; 
 }
+.cartao{
+    margin: auto ;
+    width: auto;
+    background-color: #efefefef;
+    box-shadow: 3px 2px 2px;
+    position: relative;
+    bottom: -50px;
+}
+
+.projeto{
+    margin-top: 200px;
+    display: flex; 
+    align-items: center;
+    margin-bottom: 50px;
+}
+.img{
+    width:  auto;
+    height: auto;
+    max-width: 600px;
+    max-height: 600px;
+}
+.title_proj{
+    position: relative;
+    left: 100px;
+    top: -120px;
+}
+.txt{
+    position: relative;
+    left: 50px;
+    top: -20px;
+    max-width: 350px;
+    max-height: 350x;
+}
+
+
+footer{
+    color: #ffffff;
+    background-color: #3E3145;
+    max-width: auto;
+    height: 30px;
+}
+
